Fix á alignment í myndtitli

--- a/scss/backimage.scss
+++ b/scss/backimage.scss
@@ -11,6 +11,7 @@
   align-items: center;
   justify-content: center;
   word-wrap: break-word;
+  margin-bottom: $gutter;
 
   &__title {
     font-family: "Roboto slab", serif;
@@ -18,5 +19,6 @@
     font-weight: bold;
     color: $whitecolor;
     vertical-align: middle;
+    padding-left: $gutter / 2;
   }
 }
