--- a/scss/gridabout.scss
+++ b/scss/gridabout.scss
@@ -52,6 +52,7 @@
       display: flex;
       flex-direction: row-reverse;
       justify-content: space-between;
+      align-items: center;
     }
   }
 
